# shadowqueen

./: .1099  .attribute  .attribution  .gitignore  PRICING.md  README.md  gen_carbon.py  gen_dlw.py  gen_silicon.py  index.html  issue.out  pyproject.toml  roster.json  selftest.out  stats.out  summary.json  verify.out
agents/: shadow-queen.1099  shadow-queen.agent  shadow-queen.spun  shadow-queen.tiff
builds/(shadow_queen_v1_0_rebuilt)/: README.md  config.example.json  selftest.py
builds/shadow_queen_v0_9/: README.md  TEST_RESULTS.txt  policy_events.json  pyproject.toml  selftest.py  summary.json  train_events.json
builds/shadow_queen_v1_1_stability_integrity/: README.md  TEST_RESULTS.txt  config.example.json  phase_events.json  pyproject.toml  selftest.py  summary.json
builds/shadow_queen_v1_2_recovery_rollback/: README.md  TEST_RESULTS.txt  pyproject.toml  selftest.py  summary.json
builds/shadow_queen_v1_3_event_integrity_consensus_dmv/: README.md  TEST_RESULTS.txt  dmv_events.json  pyproject.toml  selftest.py  summary.json
builds/shadow_queen_v1_4_dmv_appeals_revocation/: README.md  TEST_RESULTS.txt  appeal_review_events.json  issue_events.json  pyproject.toml  selftest.py  summary.json
builds/shadow_queen_v1_5_federation_external_audit/: README.md  TEST_RESULTS.txt  office_events.json  pyproject.toml  selftest.py  (+1 more)
dashboard/: index.html
shadowqueen/: cli.py  core.py  detector.py  reports.py  server.py
shadowqueen.dlw/: manifest.dlw.json  shadowqueen.attribute  shadowqueen.chain  shadowqueen.moniker
tests/: test_core.py  test_detector.py
(+313 files in other folders)
