[project]
name = "shadowqueen"
version = "2.6.0"
description = "Shadow Queen — Federated Credential Security Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
shadowqueen = "shadowqueen.cli:main"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
